envoy/deployment.envoy.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    meta.helm.sh/release-name: otp-1.1.0
    meta.helm.sh/release-namespace: default
  name: envoy
  labels:
    app.kubernetes.io/managed-by: Helm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: envoy
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-namespace: default
    app.kubernetes.io/managed-by: Helm
    meta.helm.sh/release-name: otp-1.1.0
  name: opentp-envoy
  labels:
    app: envoy
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
        component: controller
    spec:
      containers:
        - name: envoy
          image: 'rcastley895/envoy:latest'
          imagePullPolicy: Always
          ports:
          - containerPort: 9091
            name: admin
            protocol: TCP
          - containerPort: 10000
            name: n0
            protocol: TCP
          env:
          - name: OTEL_SERVICE_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.labels['app']
          - name: NODE_IP
            valueFrom:
              fieldRef:
                fieldPath: status.hostIP
          - name: OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE
            value: cumulative
          - name: OTEL_EXPORTER_OTLP_ENDPOINT
            value: "http://$(NODE_IP):4317"
          - name: OTEL_RESOURCE_ATTRIBUTES
            value: service.name=$(OTEL_SERVICE_NAME),service.version=1.11.1
          resources:
            limits:
              memory: 50Mi
          securityContext:
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
          volumeMounts:
      volumes:
---
apiVersion: v1
kind: Service
metadata:
  namespace: envoy
  annotations:
    meta.helm.sh/release-name: otp-1.1.0
    meta.helm.sh/release-namespace: default
  name: envoy
  labels:
    app: envoy
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
  - name: n0
    nodePort: 30142
    port: 10000
    protocol: TCP
    targetPort: n0
  selector:
    app: envoy
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
