envoy/envoy.tmpl.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                codec_type: AUTO
                stat_prefix: ingress_http
                tracing:
                  spawn_upstream_span: true
                  provider:
                    name: envoy.tracers.opentelemetry
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                      grpc_service:
                        envoy_grpc:
                          cluster_name: opentelemetry_collector_grpc
                        timeout: 0.250s
                      service_name: envoy
                      resource_detectors:
                        - name: envoy.tracers.opentelemetry.resource_detectors.environment
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.tracers.opentelemetry.resource_detectors.v3.EnvironmentResourceDetectorConfig
                route_config:
                  name: grpc_routes
                  virtual_hosts:
                    - name: grpc_local_service
                      domains:
                        - '*'
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          allow_origin_string_match:
                          - safe_regex:
                              regex: \*
                          allow_methods: "GET,POST,PUT,PATCH,DELETE,OPTIONS"
                          allow_headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Access-Control-Allow-Origin"
                          allow_credentials: true
                          max_age: "1728000"
                          expose_headers: custom-header-1,grpc-status,grpc-message
                      routes:
                        - match:
                            prefix: "/loginservice.LoginService"
                          route:
                            prefix_rewrite: "/"
                            cluster: authorization-service-cluster
                        - match:
                            prefix: "/executionvenue.ExecutionVenue"
                          route:
                            cluster: order-router-cluster
                        - match:
                            prefix: "/marketdataservice.MarketDataService"
                          route:
                            cluster: market-data-service-cluster
                        - match:
                            prefix: "/orderdataservice.OrderDataService"
                          route:
                            cluster: order-data-service-cluster
                        - match:
                            prefix: "/staticdataservice.StaticDataService"
                          route:
                            cluster: static-data-service-cluster
                        - match:
                            prefix: "/ordermonitor.OrderMonitor"
                          route:
                            cluster: order-monitor-cluster
                        - match:
                            prefix: "/clientconfigservice.ClientConfigService"
                          route:
                            cluster: client-config-service-cluster
                        - match:
                            prefix: "/"
                          route:
                            cluster: opentp-client-cluster
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                            envoy.filters.http.grpc_http1_reverse_bridge:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfigPerRoute
                              disabled: true
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext-authz
                        timeout: 0.5s
                  - name: envoy.filters.http.grpc_http1_reverse_bridge
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfig
                      content_type: application/grpc-web-text
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: opentp-client-cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: opentp-client
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: opentp-client.default
                      port_value: 80
    - name: authorization-service-cluster
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: round_robin
      load_assignment:
        cluster_name: authorization-service-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 10.42.0.5
                      port_value: 50551
    - name: market-data-service-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: market-data-service-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: market-data-service.default
                      port_value: 50551
    - name: order-data-service-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: order-data-service-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: order-data-service.default
                      port_value: 50551
    - name: order-router-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: order-router-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: order-router.default
                      port_value: 50581
    - name: static-data-service-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: static-data-service-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: static-data-service.default
                      port_value: 50551
    - name: order-monitor-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: order-monitor-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: order-monitor.default
                      port_value: 50551
    - name: client-config-service-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: client-config-service-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: client-config-service.default
                      port_value: 50551
    - name: ext-authz
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ext-authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: authorization-service.default
                      port_value: 4000
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9091
# layered_runtime:
#   layers:
#     - name: static_layer_0
#       static_layer:
#         envoy:
#           resource_limits:
#             listener:
#               example_listener_name:
#                 connection_limit: 10000
